--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,20 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
-}
-
-h2{
-     padding: 2rem;
-}
-
-h3{
-     padding: 2rem;
-}
-
-#userTable{
-     padding: 2rem;
-     column-gap: 1.5rem;
-}
+body {
+     font-family: Arial, sans-serif;
+     background-color: #f0f4f3;
+     color: #333;
+     margin: 0;
+     padding: 20px;
+   }
+   
+   h2,
+   h3 {
+     color: #006400;
+   }
+   
+   table {
+     width: 100%;
+     border-collapse: collapse;
+     margin-top: 20px;
+   }
+   
+   table,
+   th,
+   td {
+     border: 1px solid #006400;
+   }
+   
+   th,
+   td {
+     padding: 12px;
+     text-align: left;
+   }
+   
+   th {
+     background-color: #008000;
+     color: white;
+   }
+   
+   tr:hover {
+     background-color: #c5e5d3;
+   }
+   
+   #admin-createUsr-form {
+     margin-top: 20px;
+   }
+   
+   #admin-createUsr-form input {
+     margin: 5px 0;
+     padding: 10px;
+     width: calc(100% - 22px);
+     border: 1px solid #008000;
+     border-radius: 4px;
+   }
+   
+   #admin-createUsr-form button {
+     background-color: #008000;
+     color: white;
+     border: none;
+     padding: 10px 20px;
+     margin: 5px 2px;
+     cursor: pointer;
+     border-radius: 4px;
+   }
+   
+   #admin-createUsr-form button:hover {
+     background-color: #006400;
+   }
+   
+   .selected {
+     background-color: #c5e5d3;
+   }
+   body {
+     font-family: Arial, sans-serif;
+     background-color: #f0f4f3;
+     color: #333;
+     margin: 0;
+     display: flex;
+   }
+   
+   .sidebar {
+     width: 250px;
+     background-color: #008000;
+     color: white;
+     padding: 20px;
+     height: 100vh;
+     position: fixed;
+     top: 0;
+     left: 0;
+   }
+   
+   .sidebar h2 {
+     text-align: center;
+     color: white;
+   }
+   
+   .sidebar ul {
+     list-style-type: none;
+     padding: 0;
+   }
+   
+   .sidebar ul li {
+     padding: 10px 0;
+     text-align: center;
+   }
+   
+   .sidebar ul li a {
+     color: white;
+     text-decoration: none;
+     display: block;
+   }
+   
+   .sidebar ul li a:hover {
+     background-color: #006400;
+   }
+   .main-content {
+     margin-left: 270px;
+     padding: 20px;
+     width: calc(100% - 270px);
+   }
+   
